--- a/databricks.yml
+++ b/databricks.yml
@@ -4,20 +4,24 @@ bundle:
 variables:
   catalog_name:
     description: Unity Catalog to use for this solution accelerator
-    default: dev_customer_segmentation
+    default: juan_dev
   schema_name:
     description: Schema to use for this solution accelerator  
-    default: segmentation
+    default: ml
   warehouse_id:
     description: ID for the SQL Warehouse connected to the dashboard
-    default: 4b9b953939869799 # Change here or in variable overrides
+    default: 8baced1ff014912d # Change here or in variable overrides
 
 targets:
   dev:
     mode: development
     default: true
     workspace:
-      root_path: ~/.databricks/bundles/customer-segmentation
+      host: https://e2-demo-field-eng.cloud.databricks.com 
+      # root_path: ~/ml/customer-segmentation
+      # root_path: ~/.databricks/bundles/customer-segmentation
+      root_path: /Workspace/Users/${workspace.current_user.userName}/ml/customer-segmentation
+
 
   prod:
     mode: production
@@ -91,14 +95,16 @@ resources:
       continuous: false
       serverless: true
       catalog: ${var.catalog_name}
-      target: ${workspace.current_user.short_name}_${var.schema_name}
+      target: ${var.schema_name}
+      # target: ${workspace.current_user.short_name}_${var.schema_name}
       libraries:
         - notebook:
             path: ./notebooks/02a_Segmentation_Lakeflow.py
       configuration:
         "pipelines.trigger.interval": "manual"
         "catalog": "${var.catalog_name}"
-        "schema": "${workspace.current_user.short_name}_${var.schema_name}"
+        # "schema": "${workspace.current_user.short_name}_${var.schema_name}"
+        "schema": "${var.schema_name}"
 
   dashboards:
       customer_segmentation_dashboard:
